wier/force-app/main/default/objects/Weir_ComplianceQuest_Task__c/Weir_ComplianceQuest_Task__c.object-meta.xml
<CustomObject>
    <label>ComplianceQuest Task</label>
    <nameField>
        <label>Tasks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Effectiveness Review</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>