wier/force-app/main/default/objects/Weir_ComplianceQuest_Task__c/fields/Weir_CQ_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Weir_CQ_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CQ_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>