wier/force-app/main/default/objects/Weir_ComplianceQuest_Task__c/fields/Weir_CQ_Comments__c.field-meta.xml
<CustomField>
    <fullName>Weir_CQ_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>