wier/force-app/main/default/objects/Weir_ComplianceQuest_Task__c/fields/Weir_CQ_Priority__c.field-meta.xml
<CustomField>
    <fullName>Weir_CQ_Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>