wier/force-app/main/default/objects/Weir_ComplianceQuest_Task__c/fields/Weir_CQ_Subject__c.field-meta.xml
<CustomField>
    <fullName>Weir_CQ_Subject__c</fullName>
    <label>Subject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>