wier/force-app/main/default/objects/Weir_ComplianceQuest_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Weir_CQ_Related_To__c</columns>
    <columns>Weir_CQ_Subject__c</columns>
    <columns>Weir_CQ_Assigned_To__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Weir_Rating__c</columns>
    <columns>Weir_CQ_Comments__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>